--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Futuroid : " />
+    <meta name="description" content="Futuroid : An Android library for asynchronous tasks" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/clemp6r/futuroid">View on GitHub</a>
 
           <h1 id="project_title">Futuroid</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">An Android library for asynchronous tasks</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/clemp6r/futuroid/zipball/master">Download this project as a .zip file</a>
@@ -31,10 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a name="futuroid---android-library-for-asynchronous-tasks" class="anchor" href="#futuroid---android-library-for-asynchronous-tasks"><span class="octicon octicon-link"></span></a>Futuroid - Android library for asynchronous tasks</h1>
-
-<p>Futuroid is an Android library that allows running asynchronous tasks and attaching callbacks thanks to a convenient syntax. It offers an alternative to the Android <a href="http://developer.android.com/reference/android/os/AsyncTask.html">AsyncTask</a> class.</p>
+        <p>Futuroid is an Android library that allows running asynchronous tasks and attaching callbacks thanks to a convenient syntax. It offers an alternative to the Android <a href="http://developer.android.com/reference/android/os/AsyncTask.html">AsyncTask</a> class.</p>
 
 <h2>
 <a name="features" class="anchor" href="#features"><span class="octicon octicon-link"></span></a>Features</h2>
@@ -104,18 +101,21 @@ The public API is not stable and may change without notice until version 1.0.0 i
 <pre><code>&lt;dependency&gt;
     &lt;groupId&gt;com.github.clemp6r.futuroid&lt;/groupId&gt;
     &lt;artifactId&gt;futuroid&lt;/artifactId&gt;
-    &lt;version&gt;0.1&lt;/version&gt;
+    &lt;version&gt;0.1.0&lt;/version&gt;
 &lt;/dependency&gt;
 </code></pre>
 
 <p>Gradle-based configuration:</p>
 
 <pre><code>dependencies {
-    compile 'com.github.clemp6r.futuroid:futuroid:0.1'
+    compile 'com.github.clemp6r.futuroid:futuroid:0.1.0'
 }
 </code></pre>
 
-<p><a href="https://travis-ci.org/clemp6r/futuroid"><img src="https://travis-ci.org/clemp6r/futuroid.svg?branch=master" alt="Build Status"></a></p>
+<h2>
+<a name="links" class="anchor" href="#links"><span class="octicon octicon-link"></span></a>Links</h2>
+
+<p><a href="http://clemp6r.github.io/futuroid/apidocs/">API documentation</a></p>
       </section>
     </div>
 
